# quad_ws

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/fxteso_nsftasmc/: attitude_ctrl_node  fxteso_zhang_node  pose_references_node  position_ctrl_node  quad_dyn_node  quad_gazebo_comm_node
devel/lib/nsftasmc/: att_ctrl_node  pos_ctrl_node  pose_ref_node  quad_dynamics_node  quad_gazebo_com_node
devel/lib/nstasmc/: att_ctrl_node  pos_ctrl_node  pose_ref_node  quad_dynamics_node  quad_gazebo_com_node
devel/lib/pkgconfig/: fxteso_nsftasmc.pc  nsftasmc.pc  nstasmc.pc
devel/share/fxteso_nsftasmc/cmake/: fxteso_nsftasmcConfig.cmake
devel/share/nsftasmc/cmake/: nsftasmcConfig.cmake
devel/share/nstasmc/cmake/: nstasmcConfig.cmake
src/fxteso_nsftasmc/: CMakeLists.txt
src/fxteso_nsftasmc/launch/: fxteso_nsftasmc_sim.launch
src/fxteso_nsftasmc/src/: att_ctrl.cpp  fxteso_zhang.cpp  pos_ctrl.cpp  poseRef.cpp  quad_dynamics.cpp  quad_gazebo_com.cpp
src/nsftasmc/: CMakeLists.txt
src/nsftasmc/launch/: broadcaster.launch  nsftasmc_sim.launch  spawn_uav.launch
src/nsftasmc/models/F450/: model.sdf
src/nsftasmc/src/: att_ctrl.cpp  pos_ctrl.cpp  poseRef.cpp  quad_dynamics.cpp
